--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -251,12 +251,18 @@
     height: fit-content;
     width: fit-content;
     margin-top: 2rem;
-    padding-top: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
   }
 
   #contact .contact-info-upper-container {
-      margin: 0;
+      margin: auto;
       flex-wrap: wrap;
+      padding: .5rem;
+      width: fit-content;
+      width: 80%;
   }
 
   #contact .contact-info-upper-container .contact-info-container a {
